--- a/public/sass/components/_button.scss
+++ b/public/sass/components/_button.scss
@@ -30,7 +30,7 @@
 		padding: 0 2rem;
 		text-align: center;
 		text-decoration: none;
-		text-transform: uppercase;
+		text-transform: none;
 		white-space: nowrap;
 
 		&.icon {
