--- a/public/sass/layout/_header.scss
+++ b/public/sass/layout/_header.scss
@@ -38,7 +38,7 @@
 			letter-spacing: 0.075em;
 			line-height: 1;
 			padding: 1rem 1.75rem;
-			text-transform: uppercase;
+			text-transform: none;
 			visibility: visible;
 
 			&:hover {
