--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -185,7 +185,7 @@ input, select, textarea {
 		font-weight: 900;
 		line-height: 1.5;
 		letter-spacing: 0.075em;
-		text-transform: uppercase;
+		text-transform: none;
 		margin: 0 0 1rem 0;
 	}
 
@@ -2087,7 +2087,7 @@ input, select, textarea {
 		padding: 0 2rem;
 		text-align: center;
 		text-decoration: none;
-		text-transform: uppercase;
+		text-transform: none;
 		white-space: nowrap;
 	}
 
@@ -2318,7 +2318,7 @@ input, select, textarea {
 		line-height: 1.5;
 		letter-spacing: 0.075em;
 		font-size: 0.8rem;
-		text-transform: uppercase;
+		text-transform: none;
 		margin: 0 0 0.75rem 0;
 	}
 
@@ -2609,6 +2609,7 @@ input, select, textarea {
 
 			.image.fit img {
 				width: 100%;
+				border: 1px solid;
 			}
 
 		.image.main {
@@ -3009,7 +3010,7 @@ input, select, textarea {
 			line-height: 1.5;
 			padding: 0 0.75rem 0.75rem 0.75rem;
 			text-align: left;
-			text-transform: uppercase;
+			text-transform: none;
 		}
 
 			@media screen and (max-width: 980px) {
@@ -3113,7 +3114,7 @@ input, select, textarea {
 			position: relative;
 			text-align: center;
 			text-decoration: none;
-			text-transform: uppercase;
+			text-transform: none;
 		}
 
 		.pagination .next, .pagination .previous {
@@ -3545,7 +3546,7 @@ input, select, textarea {
 			letter-spacing: 0.075em;
 			line-height: 1;
 			padding: 1rem 1.75rem;
-			text-transform: uppercase;
+			text-transform: none;
 			visibility: visible;
 		}
 
@@ -3670,7 +3671,7 @@ input, select, textarea {
 			list-style: none;
 			margin-bottom: 0;
 			padding-left: 0;
-			text-transform: uppercase;
+			text-transform: none;
 		}
 
 			#nav ul.links li {
@@ -3694,11 +3695,11 @@ input, select, textarea {
 						background-color: rgba(255, 255, 255, 0.1);
 					}
 
-				#nav ul.links li.active {
+				#nav ul.links li a.active {
 					background-color: #ffffff;
 				}
 
-					#nav ul.links li.active a {
+					#nav ul.links li a.active {
 						color: #1e252d;
 					}
 
@@ -4365,7 +4366,7 @@ input, select, textarea {
 		letter-spacing: 0.075em;
 		line-height: 1.5;
 		text-align: center;
-		text-transform: uppercase;
+		text-transform: none;
 		margin: 4rem auto 8rem auto;
 		width: calc(100% - 4rem);
 		max-width: 72rem;
@@ -4474,7 +4475,7 @@ input, select, textarea {
 		font-weight: 900;
 		letter-spacing: 0.075em;
 		padding: 0.375rem 1.25rem;
-		text-transform: uppercase;
+		text-transform: none;
 		z-index: 10001;
 	}
 
@@ -4563,7 +4564,7 @@ input, select, textarea {
 					font-weight: 900;
 					letter-spacing: 0.075em;
 					padding: 0.75rem 0;
-					text-transform: uppercase;
+					text-transform: none;
 				}
 
 				#navPanel .links li:first-child {
