--- a/resources/sass/components/_pagination.scss
+++ b/resources/sass/components/_pagination.scss
@@ -35,7 +35,7 @@
 			position: relative;
 			text-align: center;
 			text-decoration: none;
-			text-transform: uppercase;
+			text-transform: none;
 		}
 
 		.next, .previous {
