--- a/resources/sass/layout/_navPanel.scss
+++ b/resources/sass/layout/_navPanel.scss
@@ -24,7 +24,7 @@
 		font-weight: _font(weight-heading);
 		letter-spacing: 0.075em;
 		padding: 0.375rem 1.25rem;
-		text-transform: uppercase;
+		text-transform: none;
 		z-index: _misc(z-index-base) + 1;
 
 		&:before {
@@ -87,7 +87,7 @@
 					font-weight: _font(weight-heading);
 					letter-spacing: 0.075em;
 					padding: 0.75rem 0;
-					text-transform: uppercase;
+					text-transform: none;
 				}
 
 				&:first-child {
